--- a/user_profile/templates/user_profile/login.html
+++ b/user_profile/templates/user_profile/login.html
@@ -1,40 +1,15 @@
+
 {% extends 'movie/base.html' %}
 
 {% block content %}
 <div class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="bg-white p-8 rounded shadow-md max-w-md w-full">
         <h2 class="text-2xl mb-6 font-semibold text-center">Login</h2>
-        
-        <!-- Thêm phần hiển thị thông báo -->
-        <!-- {% if messages %}
-            <ul class="mb-4">
-                {% for message in messages %}
-                    <li class="p-2 mb-2 rounded text-blue-50 
-                        {% if message.tags == 'success' %}bg-green-500{% elif message.tags == 'error' %}bg-red-500{% elif message.tags == 'warning' %}bg-yellow-500{% else %}bg-blue-500{% endif %}">
-                        {{ message }}
-                    </li>
-                {% endfor %}
-            </ul>
-        {% endif %} -->
-        {% if form.errors %}
-            <div class="alert alert-danger">
-                {{ form.errors.as_text }}
-            </div>
-        {% endif %}
-
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
-        
         <form method="post" action="{% url 'account:login' %}" class="space-y-4">
             {% csrf_token %}
             <div>
                 <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
-                <input type="text" id="username" name="username" value="{{ form.username.value }}" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50" required>
+                <input type="text" id="username" name="username" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50" required>
             </div>
             <div>
                 <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
@@ -45,7 +20,7 @@
             </div>
         </form>
         <div class="text-sm text-center mt-4">
-            <p>Don't have an account? <a href="{% url 'account:signup' %}" class="text-indigo-600 hover:underline">Register here</a></p>
+            <p>Don't have an account? <a href="{% url 'account:signup' %}" class="text-indigo-600">Register here</a></p>
         </div>
     </div>
 </div>
