--- a/subscription/templates/subscription/subscriptions_list.html
+++ b/subscription/templates/subscription/subscriptions_list.html
@@ -21,11 +21,12 @@
             </li>
             {% endfor %}
         </ul>
-        <button type="button" class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-200 dark:focus:ring-blue-900 font-medium rounded-lg text-sm px-5 py-2.5 inline-flex justify-center w-full text-center">
-            <a href="{% url 'subscription:subscription_detail' subscription.pk %}">
+        <button type="button" class="bg-blue-300 hover:bg-blue-400 focus:ring-4 focus:outline-none focus:ring-blue-200 dark:focus:ring-blue-900 font-medium rounded-lg text-sm px-5 py-2.5 inline-flex justify-center w-full text-center">
+            <a href="{% url 'subscription:subscription_detail' subscription.pk %}" class="text-white no-underline bg-transparent">
                 Choose plan
             </a>
         </button>
+        
     </div>
     {% endfor %}
 </div>
